--- a/css/styles.css
+++ b/css/styles.css
@@ -513,7 +513,7 @@ nav{
 8. Portfolio
 -------------------------------------------*/
 #portfolio{
-	margin-bottom: 60px;
+	margin-top: 60px;
 }
 .acvtive-link{
 	font-style: normal;
