--- a/css/styles.css
+++ b/css/styles.css
@@ -42,6 +42,38 @@ TABLE OF CONTENT
 /*Default Styles*/
 @import url("default.css");
 
+::-webkit-input-placeholder {
+  font-family: 'Red Hat Display', sans-serif;
+  font-style: normal;
+  font-weight: normal;
+  font-size: 16px;
+  line-height: 24px;
+  letter-spacing: 0.07em;
+  color: rgba(0, 0, 0, 0.25);
+  padding-left: 20px;
+}
+
+:-ms-input-placeholder { 
+  font-family: 'Red Hat Display', sans-serif;
+  font-style: normal;
+  font-weight: normal;
+  font-size: 16px;
+  line-height: 24px;
+  letter-spacing: 0.07em;
+  color: rgba(0, 0, 0, 0.25);
+  padding-left: 20px;
+}
+
+::placeholder {
+  font-family: 'Red Hat Display', sans-serif;
+  font-style: normal;
+  font-weight: normal;
+  font-size: 16px;
+  line-height: 24px;
+  letter-spacing: 0.07em;
+  color: rgba(0, 0, 0, 0.25);
+  padding-left: 20px;
+}
 /*-----------------------------------------
 1. Headings
 -------------------------------------------*/
