--- a/css/styles-3.css
+++ b/css/styles-3.css
@@ -16,14 +16,513 @@ TABLE OF CONTENT
 0. Imports
 1. headings
 2. Header
+3. Hero
+4. Services
+5. Solution
+6. Pricing
+7. Portfolio
+8. Integrity
 -------------------------------------------*/
 /*-----------------------------------------
 0. Imports
 -------------------------------------------*/
 /*Fonts*/
-@import url('https://fonts.googleapis.com/css?family=Nunito&display=swap');
 @import url('https://fonts.googleapis.com/css?family=Red+Hat+Display&display=swap');
-@import url('https://fonts.googleapis.com/css?family=Reenie+Beanie&display=swap');
-
 /*Default Styles*/
 @import url("default.css");
+
+/*-----------------------------------------
+1. headings
+-------------------------------------------*/
+.home-3-title-color {
+  text-align: center;
+  font-style: normal;
+  font-weight: 900;
+  font-size: 16px;
+  line-height: 21px;
+  letter-spacing: 0.055em;
+  color: #275CDC;
+}
+
+.home-3-title {
+  text-align: center;
+  font-style: normal;
+  font-weight: bold;
+  font-size: 40px;
+  line-height: 40px;
+  letter-spacing: 0.02em;
+  color: #000000;
+}
+
+.home-3-text {
+  font-style: normal;
+  font-weight: normal;
+  font-size: 16px;
+  line-height: 24px;
+  text-align: center;
+  letter-spacing: 0.055em;
+  color: rgba(0, 0, 0, 0.5);
+}
+
+.h3-btnstyle {
+  width: 165px;
+  height: 55px;
+  background: #275CDC;
+  border-radius: 200px;
+  font-style: normal;
+  line-height: 40px;
+  font-weight: 900;
+  font-size: 12px;
+  letter-spacing: 0.055em;
+  color: #FFFFFF;
+}
+
+.home-3-clone-title {
+  font-style: normal;
+  font-weight: 900;
+  font-size: 30px;
+  line-height: 45px;
+  text-align: center;
+  letter-spacing: 0.055em;
+  color: #000000;
+}
+
+.home-3-clone-subtitle {
+  text-align: center;
+  font-style: normal;
+  font-weight: 500;
+  font-size: 24px;
+  line-height: 36px;
+  letter-spacing: 0.055em;
+  color: #000000;
+}
+
+/*-----------------------------------------
+2. Header
+-------------------------------------------*/
+header {
+  transition: all 1s;
+  position: fixed;
+  width: 100%;
+  z-index: 10;
+}
+
+/*Nav Bar*/
+nav {
+  transition: all 0.5s;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  background-color: transparent;
+  height: 120px;
+}
+
+.nav-links {
+  display: flex;
+  justify-content: space-around;
+  width: 60%;
+}
+
+@media screen and (max-width: 1300px) {
+  .nav-links {
+    width: 60%;
+  }
+}
+
+.nav-links a {
+  font-style: normal;
+  font-weight: normal;
+  font-size: 14px;
+  letter-spacing: 0.055em;
+  color: #000;
+}
+
+.burger {
+  display: none;
+  cursor: pointer;
+}
+
+.burger div {
+  width: 25px;
+  height: 2px;
+  margin: 5px;
+  background-color: #000;
+  transition: all 0.3s ease;
+}
+
+@media screen and (max-width: 768px) {
+  .nav-links {
+    position: absolute;
+    right: 0;
+    top: 80px;
+    height: calc(100vh - 120px);
+    height: -moz-calc(100vh - 120px);
+    height: -webkit-calc(100vh - 80px);
+    width: 40%;
+    background-color: transparent;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    transform: translateX(100%);
+    transition: transform 0.5s ease-in;
+  }
+
+  .nav-links li {
+    opacity: 0;
+  }
+
+  .burger {
+    display: block;
+  }
+}
+
+.nav-active {
+  transform: translateX(0%);
+  background-color: rgba(255, 255, 255, 0.90);
+}
+
+.fixedColor div nav {
+  height: 80px;
+  transition: all 0.5s;
+}
+
+.fixedColor {
+  transition: all 1s;
+  background-color: #fff;
+  box-shadow: 4px 4px 20px rgba(205, 192, 192, 1);
+}
+
+@keyframes navLinkFade {
+  from {
+    opacity: 0;
+    transform: translateX(50px);
+  }
+
+  to {
+    opacity: 1;
+    transform: translateX(0px);
+  }
+}
+
+.toggle .line1 {
+  transform: rotate(-45deg) translate(-5px, 6px);
+}
+
+.toggle .line2 {
+  opacity: 0;
+}
+
+.toggle .line3 {
+  transform: rotate(45deg) translate(-5px, -6px);
+}
+
+.linkbtn {
+  padding: 5px 30px;
+  background: rgba(255, 255, 255, 0.33);
+  border: 2px solid #275CDC;
+  box-sizing: border-box;
+  border-radius: 200px;
+}
+
+.active {
+  position: relative;
+  font-style: normal;
+  font-weight: bold !important;
+  font-size: 14px;
+  line-height: 19px;
+  letter-spacing: 0.055em;
+  color: #000000;
+}
+
+.active::before {
+  content: "";
+  width: 5px;
+  height: 5px;
+  border-radius: 50%;
+  background-color: #000;
+  position: absolute;
+  left: -10px;
+  top: 7px;
+}
+
+/*-----------------------------------------
+3. Hero
+-------------------------------------------*/
+#hero {
+  height: 100vh;
+  width: 100%;
+  background-image: url("../img/content/home-3-hero.png");
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+}
+
+
+/*-----------------------------------------
+4. Services
+-------------------------------------------*/
+#services {
+  padding-top: 90px;
+  padding-bottom: 90px;
+}
+
+.services-item-box {
+  margin-bottom: 30px;
+  text-align: center;
+  border: 0.5px solid rgba(0, 0, 0, 0.3);
+  border-radius: 10px;
+  padding-left: 35px;
+  padding-right: 35px;
+  padding-top: 20px;
+  padding-bottom: 45px;
+}
+
+.services-item-box h4 {
+  font-style: normal;
+  font-weight: normal;
+  font-size: 18px;
+  line-height: 27px;
+  letter-spacing: 0.02em;
+  color: #000000;
+}
+
+.services-item-box p {
+  font-style: normal;
+  font-weight: normal;
+  font-size: 14px;
+  line-height: 21px;
+  color: rgba(0, 0, 0, 0.5);
+}
+
+.services-item-box a {
+  font-style: normal;
+  font-weight: bold;
+  font-size: 12px;
+  line-height: 18px;
+  letter-spacing: 0.02em;
+  color: #000000;
+}
+
+.services-item-box:hover.services-item-box h4 {
+  font-weight: bold;
+}
+
+.services-item-box:hover.services-item-box a {
+  color: #275CDC;
+}
+
+/*-----------------------------------------
+5. Solution
+-------------------------------------------*/
+#solution {
+  background: #F8F9FB;
+}
+
+.solution-box {
+  height: 585px;
+  background-image: url("../img/content/solution.png");
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position: center;
+}
+
+.solution-box img {
+  width: 100%;
+}
+
+.solution-text p {
+  font-style: normal;
+  font-weight: normal;
+  font-size: 14px;
+  line-height: 21px;
+  letter-spacing: 0.055em;
+  color: rgba(0, 0, 0, 0.5);
+}
+
+.solution-text h3 {
+  font-style: normal;
+  font-weight: bold;
+  font-size: 24px;
+  line-height: 36px letter-spacing: 0.05em;
+  color: #000000;
+}
+
+@media screen and (max-width: 768px) {
+  .solution-text {
+    margin-top: 30px;
+    text-align: center;
+    margin-bottom: 50px;
+  }
+}
+
+/*-----------------------------------------
+6. Pricing
+-------------------------------------------*/
+#pricing {
+  padding-top: 90px;
+  padding-bottom: 90px;
+}
+
+.pricing-box {
+  text-align: center;
+  padding-top: 50px;
+  padding-bottom: 50px;
+}
+
+.pricing-title {
+  font-style: normal;
+  font-weight: 800;
+  font-size: 15px;
+  line-height: 22px;
+  text-align: center;
+  letter-spacing: 0.055em;
+  color: #000000;
+}
+
+.pricing-amout {
+  font-style: normal;
+  font-weight: normal;
+  font-size: 30px;
+  line-height: 45px;
+  text-align: center;
+  letter-spacing: 0.055em;
+  color: #000000;
+  position: relative;
+  top: -30px;
+}
+
+.amout {
+  font-style: normal;
+  font-weight: 900;
+  font-size: 68px;
+  line-height: 102px;
+  text-align: center;
+  letter-spacing: 0.055em;
+  color: #000000;
+  position: relative;
+  top: 40px;
+}
+
+.pricing-item-list {
+  font-style: normal;
+  font-weight: 500;
+  font-size: 14px;
+  line-height: 21px;
+  text-align: center;
+  letter-spacing: 0.05em;
+  color: #000000;
+  width: 100%;
+  margin-bottom: 45px;
+}
+
+.pricing-item-list li {
+  margin-bottom: 10px;
+}
+
+.price-btn {
+  background: #FFFFFF;
+  border: 1px solid rgba(0, 0, 0, 0.2);
+  box-sizing: border-box;
+  border-radius: 200px;
+  font-style: normal;
+  font-weight: 900;
+  font-size: 12px;
+  line-height: 18px;
+  letter-spacing: 0.055em;
+  color: #275CDC;
+  padding: 18px 29px;
+}
+
+.pricing-box-checked {
+  background: #FFFFFF;
+  box-shadow: 4px 4px 20px rgba(162, 153, 153, 0.51);
+  border-radius: 10px;
+}
+
+/*-----------------------------------------
+7. Portfolio
+-------------------------------------------*/
+#portfolio {
+  padding-top: 40px;
+  padding-bottom: 40px;
+  margin-top: 60px;
+}
+
+.port-ite {
+  height: 280px;
+  background-repeat: no-repeat;
+  background-size: cover;
+  margin-bottom: 30px;
+  padding-right: 0 !important;
+  padding-left: 0 !important;
+}
+
+.port-ite:hover .overlay-portfolio {
+  opacity: 1;
+  transition: all 1s;
+}
+
+.overlay-portfolio {
+  background: rgba(39, 92, 220, 0.85);
+  height: 280px;
+  width: 100%;
+  display: flex;
+  align-items: flex-start;
+  justify-content: flex-end;
+  flex-direction: column;
+  opacity: 0;
+  transition: all 1s;
+  padding-left: 45px;
+  padding-bottom: 30px;
+}
+
+.overlay-portfolio a h3 {
+  font-style: normal;
+  font-weight: 900;
+  font-size: 14px;
+  line-height: 21px;
+  letter-spacing: 0.055em;
+  color: #FFFFFF;
+  position: relative;
+}
+
+.overlay-portfolio h3:before {
+  border-bottom: 3px solid #fff;
+  width: 40%;
+  content: '';
+  position: absolute;
+  bottom: -10px;
+  left: 0%;
+}
+
+.port-open {
+  transform: rotate(-45deg);
+  color: #fff;
+  position: absolute;
+  right: 10px;
+  top: 10px;
+}
+
+.port-open:hover {
+  color: #fff;
+}
+
+@media screen and (max-width: 768px) {
+  #portfolio {
+    padding-top: 0px;
+    padding-bottom: 40px;
+    margin-top: 0px;
+  }
+
+  .port-open {
+    right: 25px;
+  }
+}
+
+/*-----------------------------------------
+8. Integrity
+-------------------------------------------*/
+#integrity {
+  padding-top: 30px;
+  padding-bottom: 90px;
+}
